--- a/apache2/djangoproject.conf
+++ b/apache2/djangoproject.conf
@@ -6,23 +6,7 @@
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-	Alias /static /home/ubuntu/pfe/static
-	<Directory /home/ubuntu/pfe/static>
-		Require all granted
-	</Directory>
-
-	Alias /static /home/ubuntu/pfe/media
-	<Directory /home/ubuntu/pfe/media>
-		Require all granted
-	</Directory>
-
-	<Directory /home/ubuntu/pfe/pfe>
-		<Files wsgi.py>
-			Require all granted
-		</Files>
-	</Directory>
-
-	WSGIDaemonProcess pfe python-path=/home/ubuntu/pfe python-home=/home/ubuntu/pfe/env
-	WSGIProcessGroup pfe
-	WSGIScriptAlias / /home/ubuntu/pfe/pfe/wsgi.py
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =pfe.insper.edu.br
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
