Texto de abertura

--- a/apache2/djangoproject-le-ssl.conf
+++ b/apache2/djangoproject-le-ssl.conf
@@ -1,5 +1,7 @@
 <IfModule mod_ssl.c>
+
 <VirtualHost *:443>
+
 	ServerAdmin lpsoares@insper.edu.br
 	ServerName pfe.insper.edu.br
 	#ServerAlias pfe.insper.edu.br
@@ -23,12 +25,22 @@
 		</Files>
 	</Directory>
 
+	WSGIDaemonProcess pgadmin processes=1 threads=25 python-path=/home/ubuntu/pfe python-home=/home/ubuntu/pfe/env
+	WSGIScriptAlias /sql /home/ubuntu/pfe/env/lib/python3.6/site-packages/pgadmin4/pgAdmin4.wsgi
+
+	<Directory "/home/ubuntu/pfe/env/lib/python3.6/site-packages/pgadmin4/" >
+        WSGIProcessGroup pgadmin
+        WSGIApplicationGroup %{GLOBAL}
+        Require all granted
+	</Directory>
+
 	WSGIDaemonProcess pfe python-path=/home/ubuntu/pfe python-home=/home/ubuntu/pfe/env
 	WSGIProcessGroup pfe
 	WSGIScriptAlias / /home/ubuntu/pfe/pfe/wsgi.py
 
-SSLCertificateFile /etc/letsencrypt/live/pfe.insper.edu.br/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/pfe.insper.edu.br/privkey.pem
-Include /etc/letsencrypt/options-ssl-apache.conf
+	SSLCertificateFile /etc/letsencrypt/live/pfe.insper.edu.br/fullchain.pem
+	SSLCertificateKeyFile /etc/letsencrypt/live/pfe.insper.edu.br/privkey.pem
+	Include /etc/letsencrypt/options-ssl-apache.conf
+
 </VirtualHost>
 </IfModule>
