--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-#django-debug-toolbar==2.2
+Django==2.2.6
+celery==4.3.0
+vine==1.3.0
+psycopg2==2.8.5
+django-import-export==1.2.0
+django-debug-toolbar==2.2
+icalendar==4.0.4
+xhtml2pdf==0.2.3
+
