--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.24
 celery==4.3.0
 vine==1.3.0
+psycopg2-binary==2.8.5
 psycopg2==2.8.5
 django-import-export==1.2.0
 django-debug-toolbar==2.2.1
