--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==2.2.25
 celery==5.2.2
-vine==1.3.0
+# vine==1.3.0 creio que não estou usando mais
 psycopg2-binary==2.8.5
 psycopg2==2.8.5
 django-import-export==1.2.0
