--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==2.2.28
 celery==5.2.2
 # vine==1.3.0 creio que não estou usando mais
-psycopg2-binary==2.8.5
-psycopg2==2.8.5
+psycopg2-binary>=2.8.5
+psycopg2>=2.8.5
 django-import-export==1.2.0
 django-debug-toolbar==2.2.1
 icalendar==4.0.4
