--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.2.28
 celery==5.2.2
+reportlab==3.6.6
 # vine==1.3.0 creio que não estou usando mais
 psycopg2-binary>=2.8.5
 psycopg2>=2.8.5
