--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Django==2.2.28
 celery==5.2.2
-reportlab==3.6.6
 # vine==1.3.0 creio que não estou usando mais
 psycopg2-binary>=2.8.5
 psycopg2>=2.8.5
@@ -14,3 +13,4 @@ postgres==3.0.0
 python-dateutil==2.8.1
 PyPDF2==1.27.9
 hashids==1.3.1
+reportlab==3.6.6  # usar no maximo python3.10
