--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ python-dateutil==2.8.1
 PyPDF2==1.27.9
 hashids==1.3.1
 reportlab==3.6.6  # usar no maximo python3.10
+django-ipware==4.0.2  # Para detectar os IPs no Axes
+django-axes==5.13.1 # Sistem que bloqueia usuário e IP após 3 tentativas de login 
