--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==2.2.28
-celery==5.2.2
+#celery==5.2.2
+celery==4.3.0
 # vine==1.3.0 creio que não estou usando mais
-psycopg2-binary>=2.8.5
-psycopg2>=2.8.5
+# psycopg2==2.8.5 # aparentemente não é necessário
+psycopg2-binary==2.8.6 # se necessario --no-cache-dir
+psycopg2-pool==1.1
 django-import-export==1.2.0
 django-debug-toolbar==2.2.1
 icalendar==4.0.4
@@ -14,5 +16,6 @@ python-dateutil==2.8.1
 PyPDF2==1.27.9
 hashids==1.3.1
 reportlab==3.6.6  # usar no maximo python3.10
+#django-ipware==3.0.7  # Aparentemente para Mac preciso dessa versão
 django-ipware==4.0.2  # Para detectar os IPs no Axes
-django-axes==5.13.1 # Sistem que bloqueia usuário e IP após 3 tentativas de login 
+django-axes==5.13.1 # Sistem que bloqueia usuário e IP após N tentativas invalidas de login 
