--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@ arquivos/*
 celerybeat-schedule
 celerybeat-schedule.db
 celerybeat.pid
+celerybeat-schedule.bak
+celerybeat-schedule.dat
+celerybeat-schedule.dir
 dump.rdb
 dump.json
 old/
 /static/
 /ip-*
 /default-ip-*
+
