--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@ pfe/settings.py
 *.log
 .DS_Store
 arquivos/*
+paginas/*
 *.code-workspace
+celerybeat.pid
 celerybeat-schedule
 celerybeat-schedule.db
-celerybeat.pid
 celerybeat-schedule.bak
 celerybeat-schedule.dat
 celerybeat-schedule.dir
@@ -19,4 +20,3 @@ old/
 /static/
 /ip-*
 /default-ip-*
-
