--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ reportlab==3.6.6  # usar no maximo python3.10
 #django-ipware==3.0.7  # Aparentemente para Mac preciso dessa versão
 django-ipware==4.0.2  # Para detectar os IPs no Axes
 django-axes==5.13.1 # Sistem que bloqueia usuário e IP após N tentativas invalidas de login 
+tablib==3.1.0 # Para exportar arquivos em excel
+openpyxl==3.1.3 # Para exportar arquivos em excel
+et_xmlfile==1.1.0 # Para exportar arquivos em excel
