--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,4 @@ packaging==21.3  # manipulação de pacotes
 pyparsing==3.1.4  # manipulação de expressões regulares
 six==1.13.0  # compatibilidade com Python 2
 typing_extensions==4.1.1  # extensões para o módulo typing
+django-log-viewer==1.1.8  # visualização de logs do Django
