--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ webencodings==0.5.1  # algoritmos de codificação de caracteres
 
 # Segurança
 certifi==2025.1.31  # certificados SSL
+django-ratelimit==3.0.1  # limitar número de requisições a views
 
 # Outros
 bleach==4.1.0  # Para limpar o HTML
