--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ chardet==3.0.4  # detecção de codificação de caracteres
 # Segurança
 certifi==2025.1.31  # certificados SSL
 django-ratelimit==3.0.1  # limitar número de requisições a views
+qrcode==7.3.1  # geração de códigos QR
 
 # Outros
 bleach==4.1.0  # Para limpar o HTML
